crowdsource-api/k8s-deployments/azure/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vakyansh
spec:
  selector:
    matchLabels:
      app: vakyansh
  replicas: 1
  template:
    metadata:
      annotations:
        commit_sha: CIRCLE_SHA1
      labels:
        app: vakyansh
    spec:
      containers:
        - image: IMAGE_NAME
          imagePullPolicy: Always
          name: vakyansh
          ports:
            - containerPort: 8080

          resources:
            limits:
              cpu: 500m
              memory: 150Mi
