crowdsource-api/k8s-deployments/azure/deployment_prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vakyansh
spec:
  selector:
    matchLabels:
      app: vakyansh
  replicas: 1
  template:
    metadata:
      annotations:
        commit_sha: CIRCLE_SHA1
      labels:
        app: vakyansh
    spec:

      tolerations:
        - key: "env"
          operator: "Equal"
          value: "prod"
          effect: "NoSchedule"
      containers:
        - image: IMAGE_NAME
          imagePullPolicy: Always
          name: vakyansh
          ports:
            - containerPort: 8080

          resources:
            limits:
              cpu: 200m
              memory: 400Mi
