crowdsource-api/k8s-deployments/azure/deployment_uat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vakyansh
spec:
  selector:
    matchLabels:
      app: vakyansh
  replicas: 1
  template:
    metadata:
      annotations:
        commit_sha: CIRCLE_SHA1
      labels:
        app: vakyansh
    spec:
      tolerations:
        - key: "env"
          operator: "Equal"
          value: "uat"
          effect: "NoSchedule"
      containers:
        - image: vakyansh.azurecr.io/vakyansh:uat
          imagePullPolicy: Always
          name: vakyansh
          ports:
            - containerPort: 8080

          resources:
            limits:
              cpu: 2000m
              memory: 4Gi
