crowdsource-api/k8s-deployments/azure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vakyansh-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: vakyansh
