crowdsource-api/k8s-deployments/azure/ingress_prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vakyansh
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/limit-rps: '2000'
    # nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  tls:
  - secretName: aks-ingress-tls-prod
  rules:
  - host: bhashadaan-api.bhashini.gov.in
  - http:
      paths:
      - path: /
        # pathType: Prefix
        backend:
          serviceName: vakyansh-app
          servicePort: 8080
